[tool.poetry]
name = "binance-webhooks"
version = "0.1.0"
description = ""
authors = ["Mastermind-U <rex49513@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-binance = "^1.0.15"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
hvac = "^0.11.2"
loguru = "^0.6.0"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-pytest = "^1.3"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
